--- a/src/index.html
+++ b/src/index.html
@@ -90,8 +90,39 @@
             </div>
         </div>
     </section>
+    <div style="text-align: center;">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" style="display: inline-block;">
+            <!-- Indicators -->
+            <ol class="carousel-indicators" style="bottom: 0px;">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="./img/ad_default.png" alt="Los Angeles">
+                </div>
+                <div class="item">
+                    <img src="./img/ad_default.png" alt="Chicago">
+                </div>
+                <div class="item">
+                    <img src="./img/ad_default.png" alt="New York">
+                </div>
+            </div>
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev" style="background-image: none;">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next" style="background-image: none;">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
     <!-- Product Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
+    <section id="portfolio" class="bg-light-gray" style="margin-top: 30px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -112,8 +143,8 @@
                     <div class="portfolio-caption">
                         <h4>千金純滴雞精20入</h4>
                         <p class="text-muted" style="margin-top: 10px;">
-                          ▼85折▼
-                          <span style="text-decoration: line-through; font-size: 12px;">原價 NT2,100</span></p>
+                            ▼85折▼
+                            <span style="text-decoration: line-through; font-size: 12px;">原價 NT2,100</span></p>
                         <span>優惠中 <span style="color: red;">NT1,800</span></span>
                     </div>
                 </div>
@@ -129,8 +160,8 @@
                     <div class="portfolio-caption">
                         <h4>千金純滴雞精10入</h4>
                         <p class="text-muted" style="margin-top: 10px;">
-                          ▼85折▼
-                          <span style="text-decoration: line-through; font-size: 12px;">原價 NT2,100</span></p>
+                            ▼85折▼
+                            <span style="text-decoration: line-through; font-size: 12px;">原價 NT2,100</span></p>
                         <span>優惠中 <span style="color: red;">NT1,800</span></span>
                     </div>
                 </div>
@@ -146,8 +177,8 @@
                     <div class="portfolio-caption">
                         <h4>千金純滴雞精20入</h4>
                         <p class="text-muted" style="margin-top: 10px;">
-                          ▼85折▼
-                          <span style="text-decoration: line-through; font-size: 12px;">原價 NT2,100</span></p>
+                            ▼85折▼
+                            <span style="text-decoration: line-through; font-size: 12px;">原價 NT2,100</span></p>
                         <span>優惠中 <span style="color: red;">NT1,800</span></span>
                     </div>
                 </div>
@@ -163,8 +194,8 @@
                     <div class="portfolio-caption">
                         <h4>千金純滴雞精10入</h4>
                         <p class="text-muted" style="margin-top: 10px;">
-                          ▼85折▼
-                          <span style="text-decoration: line-through; font-size: 12px;">原價 NT2,100</span></p>
+                            ▼85折▼
+                            <span style="text-decoration: line-through; font-size: 12px;">原價 NT2,100</span></p>
                         <span>優惠中 <span style="color: red;">NT1,800</span></span>
                     </div>
                 </div>
@@ -180,8 +211,8 @@
                     <div class="portfolio-caption">
                         <h4>千金純滴雞精20入</h4>
                         <p class="text-muted" style="margin-top: 10px;">
-                          ▼85折▼
-                          <span style="text-decoration: line-through; font-size: 12px;">原價 NT2,100</span></p>
+                            ▼85折▼
+                            <span style="text-decoration: line-through; font-size: 12px;">原價 NT2,100</span></p>
                         <span>優惠中 <span style="color: red;">NT1,800</span></span>
                     </div>
                 </div>
@@ -197,8 +228,8 @@
                     <div class="portfolio-caption">
                         <h4>千金純滴雞精20入</h4>
                         <p class="text-muted" style="margin-top: 10px;">
-                          ▼85折▼
-                          <span style="text-decoration: line-through; font-size: 12px;">原價 NT2,100</span></p>
+                            ▼85折▼
+                            <span style="text-decoration: line-through; font-size: 12px;">原價 NT2,100</span></p>
                         <span>優惠中 <span style="color: red;">NT1,800</span></span>
                     </div>
                 </div>
@@ -237,8 +268,8 @@
                                     <img class="col-sm-6 img-responsive img-centered" src="img/product/ad1.png" alt="">
                                     <div class="col-sm-6">
                                         <div style="border-top: #CAB097 1px solid; border-bottom: #CAB097 1px solid; padding: 10px; text-align: left;">
-                                            <div>● 原價 NT 
-                                              <div  style="text-decoration: line-through; display: inline-block; margin-bottom: 10px;">2,100元</div>
+                                            <div>● 原價 NT
+                                                <div style="text-decoration: line-through; display: inline-block; margin-bottom: 10px;">2,100元</div>
                                             </div>
                                             <div>● 優惠價 NT 1,800元</div>
                                         </div>
@@ -248,7 +279,7 @@
                                 </div>
                                 <div style="text-align: left; margin-top: 30px;">
                                     <div class="product-descipt-title">
-                                      商品介紹
+                                        商品介紹
                                     </div>
                                     <span>● 傳承老祖宗百年智慧，遵循古法再升級。 獨特的蒸氣不回流、油脂分離技術 ，保存滴雞精的精純與甘醇。</span>
                                     <br />
@@ -303,8 +334,8 @@
                                     <img class="col-sm-6 img-responsive img-centered" src="img/product/ad2.png" alt="">
                                     <div class="col-sm-6">
                                         <div style="border-top: #CAB097 1px solid; border-bottom: #CAB097 1px solid; padding: 10px; text-align: left;">
-                                            <div>● 原價 NT 
-                                              <div  style="text-decoration: line-through; display: inline-block; margin-bottom: 10px;">2,100元</div>
+                                            <div>● 原價 NT
+                                                <div style="text-decoration: line-through; display: inline-block; margin-bottom: 10px;">2,100元</div>
                                             </div>
                                             <div>● 優惠價 NT 1,800元</div>
                                         </div>
@@ -314,7 +345,7 @@
                                 </div>
                                 <div style="text-align: left; margin-top: 30px;">
                                     <div class="product-descipt-title">
-                                      商品介紹
+                                        商品介紹
                                     </div>
                                     <span>● 傳承老祖宗百年智慧，遵循古法再升級。 獨特的蒸氣不回流、油脂分離技術 ，保存滴雞精的精純與甘醇。</span>
                                     <br />
@@ -369,8 +400,8 @@
                                     <img class="col-sm-6 img-responsive img-centered" src="img/product/ad1.png" alt="">
                                     <div class="col-sm-6">
                                         <div style="border-top: #CAB097 1px solid; border-bottom: #CAB097 1px solid; padding: 10px; text-align: left;">
-                                            <div>● 原價 NT 
-                                              <div  style="text-decoration: line-through; display: inline-block; margin-bottom: 10px;">2,100元</div>
+                                            <div>● 原價 NT
+                                                <div style="text-decoration: line-through; display: inline-block; margin-bottom: 10px;">2,100元</div>
                                             </div>
                                             <div>● 優惠價 NT 1,800元</div>
                                         </div>
@@ -380,7 +411,7 @@
                                 </div>
                                 <div style="text-align: left; margin-top: 30px;">
                                     <div class="product-descipt-title">
-                                      商品介紹
+                                        商品介紹
                                     </div>
                                     <span>● 傳承老祖宗百年智慧，遵循古法再升級。 獨特的蒸氣不回流、油脂分離技術 ，保存滴雞精的精純與甘醇。</span>
                                     <br />
@@ -435,8 +466,8 @@
                                     <img class="col-sm-6 img-responsive img-centered" src="img/product/ad2.png" alt="">
                                     <div class="col-sm-6">
                                         <div style="border-top: #CAB097 1px solid; border-bottom: #CAB097 1px solid; padding: 10px; text-align: left;">
-                                            <div>● 原價 NT 
-                                              <div  style="text-decoration: line-through; display: inline-block; margin-bottom: 10px;">2,100元</div>
+                                            <div>● 原價 NT
+                                                <div style="text-decoration: line-through; display: inline-block; margin-bottom: 10px;">2,100元</div>
                                             </div>
                                             <div>● 優惠價 NT 1,800元</div>
                                         </div>
@@ -446,7 +477,7 @@
                                 </div>
                                 <div style="text-align: left; margin-top: 30px;">
                                     <div class="product-descipt-title">
-                                      商品介紹
+                                        商品介紹
                                     </div>
                                     <span>● 傳承老祖宗百年智慧，遵循古法再升級。 獨特的蒸氣不回流、油脂分離技術 ，保存滴雞精的精純與甘醇。</span>
                                     <br />
@@ -501,8 +532,8 @@
                                     <img class="col-sm-6 img-responsive img-centered" src="img/product/ad1.png" alt="">
                                     <div class="col-sm-6">
                                         <div style="border-top: #CAB097 1px solid; border-bottom: #CAB097 1px solid; padding: 10px; text-align: left;">
-                                            <div>● 原價 NT 
-                                              <div  style="text-decoration: line-through; display: inline-block; margin-bottom: 10px;">2,100元</div>
+                                            <div>● 原價 NT
+                                                <div style="text-decoration: line-through; display: inline-block; margin-bottom: 10px;">2,100元</div>
                                             </div>
                                             <div>● 優惠價 NT 1,800元</div>
                                         </div>
@@ -512,7 +543,7 @@
                                 </div>
                                 <div style="text-align: left; margin-top: 30px;">
                                     <div class="product-descipt-title">
-                                      商品介紹
+                                        商品介紹
                                     </div>
                                     <span>● 傳承老祖宗百年智慧，遵循古法再升級。 獨特的蒸氣不回流、油脂分離技術 ，保存滴雞精的精純與甘醇。</span>
                                     <br />
@@ -567,8 +598,8 @@
                                     <img class="col-sm-6 img-responsive img-centered" src="img/product/ad2.png" alt="">
                                     <div class="col-sm-6">
                                         <div style="border-top: #CAB097 1px solid; border-bottom: #CAB097 1px solid; padding: 10px; text-align: left;">
-                                            <div>● 原價 NT 
-                                              <div  style="text-decoration: line-through; display: inline-block; margin-bottom: 10px;">2,100元</div>
+                                            <div>● 原價 NT
+                                                <div style="text-decoration: line-through; display: inline-block; margin-bottom: 10px;">2,100元</div>
                                             </div>
                                             <div>● 優惠價 NT 1,800元</div>
                                         </div>
@@ -578,7 +609,7 @@
                                 </div>
                                 <div style="text-align: left; margin-top: 30px;">
                                     <div class="product-descipt-title">
-                                      商品介紹
+                                        商品介紹
                                     </div>
                                     <span>● 傳承老祖宗百年智慧，遵循古法再升級。 獨特的蒸氣不回流、油脂分離技術 ，保存滴雞精的精純與甘醇。</span>
                                     <br />
