--- a/src/index.html
+++ b/src/index.html
@@ -236,6 +236,21 @@
             </div>
         </div>
     </section>
+        <section id="portfolio" class="bg-light-gray" style="margin-top: 30px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">檢驗合格</h2>
+                    <div style="font-size: 18px; margin-bottom: 20px; color: #999;">層層把關、不添加防腐劑，您最安心的選擇！</div>
+                </div>
+            </div>
+            <div class="row" style="text-align: center;">
+                <img class="sgs" src="./img/sgs1.png" alt="千金醇，SGS檢驗合格">
+                <img class="sgs" src="./img/sgs2.png" alt="千金醇，SGS檢驗合格">
+                <img class="sgs" src="./img/sgs3.png" alt="千金醇，SGS檢驗合格">
+            </div>
+        </div>
+    </section>
     <footer>
         <h4>誥豐國際貿易有限公司</h4>
         <div class="footerText">
