--- a/src/contact.html
+++ b/src/contact.html
@@ -109,6 +109,9 @@
     </section>
     <footer>
       <h4>誥豐國際貿易有限公司</h4>
+        <span style="margin: 10px; white-space: nowrap;">客服電話：04 - 26867820</span>
+        <span style="margin: 10px; white-space: nowrap;">客服時間：8:30 ～ 17:30</span>
+        <span style="margin: 10px; white-space: nowrap;">傳真：04 - 26867770</span>
     </footer>
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
