--- a/src/about.html
+++ b/src/about.html
@@ -74,17 +74,17 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">以古法煉製滴出千金醇滴雞精</h2>
-                    <div style="text-align: left; font-size: 18px; color: #999; margin-bottom: 20px;">總記得小時候家裡魚池旁飼養的土雞，父母親總是要花4至6個月的時間，每天細心的照顧，
+                    <div style="width: 90%; display: inline-block; text-align: left; font-size: 18px; color: #999; margin: 20px 0px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;總記得小時候家裡魚池旁飼養的土雞，父母親總是要花4至6個月的時間，每天細心的照顧，
                         土雞固定時間放山運動到雞舍清洗餵食，目的就是為了給孩子們準備一碗濃純香能補充元氣
                         ，增強免疫力的滴雞精。從小到大，走進廚房，總能看到爸媽正辛苦的為家中孩子們準備滴雞精，每一滴的滴雞精，都猶如父母親對孩子的愛，就像千金般的珍貴，於是我們將這份父母親疼惜孩子的滴雞精取名為千金醇，讓這一份愛延續擴散到每個家庭。
                     </div>
-                    <div style="text-align: left; font-size: 18px; color: #999; margin-bottom: 20px;">
-                        我們嚴選飼養4至6個月的土公雞，以古法淬煉的技術，經隔水加熱的方式，需10小時的時
+                    <div style="width: 90%; display: inline-block;  text-align: left; font-size: 18px; color: #999; margin-bottom: 20px;">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我們嚴選飼養4至6個月的土公雞，以古法淬煉的技術，經隔水加熱的方式，需10小時的時
                         間來淬煉雞精，所淬煉出來的滴雞精，每一滴都是精華。
                     </div>
                 </div>
             </div>
-            <div class="row" style="background: #DDD8CD; padding: 40px 10px">
+            <div class="row" style="background: #eeeeee; padding: 40px 10px">
                 <div class="col-lg-12">
                     <ul class="timeline">
                         <li>
@@ -142,7 +142,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image" >
-                                <h4><br/>只給你最好的<br/></h4>
+                                <span>The Best</span>
                             </div>
                         </li>
                     </ul>
@@ -150,12 +150,12 @@
             </div>
         </div>
     </section>
-    <section id="team" class="bg-light-gray">
+    <section id="team" class="bg-light-gray container">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">哪些人適合飲用</h2>
-                    <h3 class="section-subheading text-muted">特別建議於早晨飲用，空腹時吸收效果更佳，讓一天都充滿活力！</h3>
+                    <h3 class="section-subheading" style="color: #999;">特別建議於早晨飲用，空腹時吸收效果更佳，讓一天都充滿活力！</h3>
                 </div>
             </div>
             <div class="row">
@@ -204,7 +204,10 @@
         </div>
     </div>
     <footer>
-      <h4>誥豐國際貿易有限公司</h4>
+        <h4>誥豐國際貿易有限公司</h4>
+        <span style="margin: 10px; white-space: nowrap;">客服電話：04 - 26867820</span>
+        <span style="margin: 10px; white-space: nowrap;">客服時間：8:30 ～ 17:30</span>
+        <span style="margin: 10px; white-space: nowrap;">傳真：04 - 26867770</span>
     </footer>
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
