--- a/src/about.html
+++ b/src/about.html
@@ -208,6 +208,7 @@
         <span style="margin: 10px; white-space: nowrap;">客服電話：04 - 26867820</span>
         <span style="margin: 10px; white-space: nowrap;">客服時間：8:30 ～ 17:30</span>
         <span style="margin: 10px; white-space: nowrap;">傳真：04 - 26867770</span>
+        <div style="margin: 10px; white-space: nowrap;">©2017 Goldbest</div>
     </footer>
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
