--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/product/ad1_preview.png" class="img-responsive" alt="">
+                        <img src="img/product/ad2_preview.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>千金純滴雞精10入</h4>
@@ -188,6 +188,7 @@
         <span style="margin: 10px; white-space: nowrap;">客服電話：04 - 26867820</span>
         <span style="margin: 10px; white-space: nowrap;">客服時間：8:30 ～ 17:30</span>
         <span style="margin: 10px; white-space: nowrap;">傳真：04 - 26867770</span>
+        <div style="margin: 10px; white-space: nowrap;">©2017 Goldbest</div>
     </footer>
     <!-- Portfolio Modals -->
     <!-- Use the modals below to showcase details about your portfolio projects! -->
@@ -209,7 +210,7 @@
                                 <div class="product-title">千金純滴雞精10入</div>
                                 <p style="margin: 10px 5px 20px 5px;">▼94折▼千金醇滴雞精10入(60ml/入)</p>
                                 <div style="position: relative; display: inline-block;">
-                                    <img class="col-sm-6 img-responsive img-centered" src="img/product/ad1.png" alt="">
+                                    <img class="col-sm-6 img-responsive img-centered" src="img/product/ad2.png" alt="">
                                     <div class="col-sm-6">
                                         <div style="border-top: #CAB097 1px solid; border-bottom: #CAB097 1px solid; padding: 10px; text-align: left;">
                                             <div>● 原價 NT
