--- a/src/contact.html
+++ b/src/contact.html
@@ -74,7 +74,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <form name="sentMessage" id="contactForm" method="POST" action="http://formspree.io/ares79121225@yahoo.com.tw" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -82,7 +82,7 @@
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Email" id="email" required data-validation-required-message="請輸入E-mail信箱">
+                                    <input type="email" class="form-control" placeholder="Email" id="email" name="email" required data-validation-required-message="請輸入E-mail信箱">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
@@ -92,7 +92,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="訊息" id="message" required data-validation-required-message="請輸入訊息"></textarea>
+                                    <textarea class="form-control" placeholder="訊息" id="message" name="message" required data-validation-required-message="請輸入訊息"></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
@@ -112,6 +112,7 @@
         <span style="margin: 10px; white-space: nowrap;">客服電話：04 - 26867820</span>
         <span style="margin: 10px; white-space: nowrap;">客服時間：8:30 ～ 17:30</span>
         <span style="margin: 10px; white-space: nowrap;">傳真：04 - 26867770</span>
+        <div style="margin: 10px; white-space: nowrap;">©2017 Goldbest</div>
     </footer>
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
