--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,14 @@
 </head>
 
 <body id="page-top" class="index">
+    <div class="shareFbAndLine">
+        <a href="https://www.facebook.com/%E5%8D%83%E9%87%91%E9%86%87-237241953387403/" target="_blank">
+            <img src="./img/fbIcon.png" title="滴雞精FB">
+        </a>
+        <a href="#shareLineImage" class="portfolio-link" data-toggle="modal">
+            <img className="shareLine" src="./img/lineIcon.png" title="滴雞精Line">
+        </a>
+    </div>
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container">
@@ -95,19 +103,11 @@
             <!-- Indicators -->
             <ol class="carousel-indicators" style="bottom: 0px;">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
             </ol>
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="./img/line.png" alt="Los Angeles">
-                </div>
-                <div class="item">
-                    <img src="./img/ad_default.png" alt="Chicago">
-                </div>
-                <div class="item">
-                    <img src="./img/ad_default.png" alt="New York">
+                    <img src="./img/line.png">
                 </div>
             </div>
             <!-- Left and right controls -->
@@ -145,7 +145,7 @@
                         <p class="text-muted" style="margin-top: 10px;">
                             ▼94折▼
                             <span style="text-decoration: line-through; font-size: 12px;">原價 NT1,980</span></p>
-                        <span>優惠中 <span style="color: red;">NT1,880</span></span>
+                        <span>優惠中 <span style="color: red;">NT1,890</span></span>
                     </div>
                 </div>
                 <div class="col-md-6 portfolio-item">
@@ -186,7 +186,6 @@
     <footer>
         <h4>誥豐國際貿易有限公司</h4>
         <span style="margin: 10px; white-space: nowrap;">客服電話：04 - 26867820</span>
-        <span style="margin: 10px; white-space: nowrap;">客服時間：8:30 ～ 17:30</span>
         <span style="margin: 10px; white-space: nowrap;">傳真：04 - 26867770</span>
         <div style="margin: 10px; white-space: nowrap;">©2017 Goldbest</div>
     </footer>
@@ -197,9 +196,8 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl">
-                        </div>
+                    <div class="lr" style="height: 35px; width: 5px;">
+                        <div class="rl" style="height: 35px; width: 5px;"></div>
                     </div>
                 </div>
                 <div class="container">
@@ -263,9 +261,8 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl">
-                        </div>
+                    <div class="lr" style="height: 35px; width: 5px;">
+                        <div class="rl" style="height: 35px; width: 5px;"></div>
                     </div>
                 </div>
                 <div class="container">
@@ -321,6 +318,18 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="shareLineImage" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content" style="padding-top: 30px; background-color: rgba(0, 0, 0, .075);">
+                <div class="close-modal linePopupClose" data-dismiss="modal">
+                    <div class="lr" style="height: 35px; width: 5px; background-color: #FFF">
+                        <div class="rl" style="height: 35px; width: 5px; background-color: #FFF"></div>
+                    </div>
+                </div>
+                <img src="./img/line2.png"/>
             </div>
         </div>
     </div>
