--- a/src/shopping.html
+++ b/src/shopping.html
@@ -27,6 +27,14 @@
 </head>
 
 <body id="page-top" class="index">
+    <div class="shareFbAndLine">
+        <a href="https://www.facebook.com/%E5%8D%83%E9%87%91%E9%86%87-237241953387403/" target="_blank">
+            <img src="./img/fbIcon.png" title="滴雞精FB">
+        </a>
+        <a href="#shareLineImage" class="portfolio-link" data-toggle="modal">
+            <img className="shareLine" src="./img/lineIcon.png" title="滴雞精Line">
+        </a>
+    </div>
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container">
@@ -63,6 +71,18 @@
             </div>
         </div>
     </header>
+    <div class="portfolio-modal modal fade" id="shareLineImage" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content" style="padding-top: 30px; background-color: rgba(0, 0, 0, .075);">
+                <div class="close-modal linePopupClose" data-dismiss="modal">
+                    <div class="lr" style="height: 35px; width: 5px; background-color: #FFF">
+                        <div class="rl" style="height: 35px; width: 5px; background-color: #FFF"></div>
+                    </div>
+                </div>
+                <img src="./img/line2.png"/>
+            </div>
+        </div>
+    </div>
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
