--- a/src/index.html
+++ b/src/index.html
@@ -224,13 +224,13 @@
                                     <div class="product-descipt-title">
                                         商品介紹
                                     </div>
-                                    <span>● 傳承老祖宗百年智慧，遵循古法再升級。 獨特的蒸氣不回流、油脂分離技術 ，保存滴雞精的精純與甘醇。</span>
+                                    <span>● 傳承老祖宗百年智慧，遵循古法慢火淬鍊。 慢火蒸煮十小時、每個鍋爐只放5隻雞，保存滴雞精的精純與甘醇。</span>
                                     <br />
-                                    <span>● 嚴選 100 天台灣原生黑羽土雞 ， 一隻雞只能滴出 2.5 包的滴雞精，封存滴滴精華。</span>
+                                    <span>● 嚴選台南契養的原生黑羽土雞，一隻雞只能滴出2.5包的滴雞精，富含多種氨基酸及豐富的蛋白質。</span>
                                     <br />
-                                    <span>● 國際標準製程，生產系統通過 HACCP、ISO22000考核，並經中央畜產會、 SGS 品質檢驗認證 。</span>
+                                    <span>● 通過 HACCP、ISO22000考核，並經中央畜產會、 SGS 品質檢驗認證，每批產品都必須通過檢驗合格。</span>
                                     <br />
-                                    <span>● 富含 16 種胺基酸 、 膠原蛋白 。適合 病後體弱之恢復元氣 、 產後術後之調理養身 、 熬夜傷神之精力補給 、 成長發育之營養補充 。</span>
+                                    <span>● 富含多種營養成分、膠原蛋白。適合體弱之恢復元氣、產後術後之調理養身、熬夜傷神的營養補給、成長發育期的孩童 。</span>
                                     <span><br />
                                     <div class="product-descipt-title" style="margin-top: 20px;">
                                       適合飲用對象
@@ -289,13 +289,13 @@
                                     <div class="product-descipt-title">
                                         商品介紹
                                     </div>
-                                    <span>● 傳承老祖宗百年智慧，遵循古法再升級。 獨特的蒸氣不回流、油脂分離技術 ，保存滴雞精的精純與甘醇。</span>
+                                    <span>● 傳承老祖宗百年智慧，遵循古法慢火淬鍊。 慢火蒸煮十小時、每個鍋爐只放5隻雞，保存滴雞精的精純與甘醇。</span>
                                     <br />
-                                    <span>● 嚴選 100 天台灣原生黑羽土雞 ， 一隻雞只能滴出 2.5 包的滴雞精，封存滴滴精華。</span>
+                                    <span>● 嚴選台南契養的原生黑羽土雞，一隻雞只能滴出2.5包的滴雞精，富含多種氨基酸及豐富的蛋白質。</span>
                                     <br />
-                                    <span>● 國際標準製程，生產系統通過 HACCP、ISO22000考核，並經中央畜產會、 SGS 品質檢驗認證 。</span>
+                                    <span>● 通過 HACCP、ISO22000考核，並經中央畜產會、 SGS 品質檢驗認證，每批產品都必須通過檢驗合格。</span>
                                     <br />
-                                    <span>● 富含 16 種胺基酸 、 膠原蛋白 。適合 病後體弱之恢復元氣 、 產後術後之調理養身 、 熬夜傷神之精力補給 、 成長發育之營養補充 。</span>
+                                    <span>● 富含多種營養成分、膠原蛋白。適合體弱之恢復元氣、產後術後之調理養身、熬夜傷神的營養補給、成長發育期的孩童 。</span>
                                     <span><br />
                                     <div class="product-descipt-title" style="margin-top: 20px;">
                                       適合飲用對象
