--- a/src/product.html
+++ b/src/product.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <meta charset="utf-8">
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="優質滴雞精，給家人最好的選擇－千金醇" />
     <meta name="author" content="">
-    <title>千金醇 － 滴雞精首選</title>
+    <title>千金醇 － 滴雞精首選 － 產品介紹</title>
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- Custom Fonts -->
